--- a/CoralCraft/Assets/Coral/L-System/Config.json
+++ b/CoralCraft/Assets/Coral/L-System/Config.json
@@ -1,1 +1,1 @@
-{"myConfigs":[]}
+{"myConfigs":[{"name":"test","thickness":0.25,"length":0.75,"nbIteration":2,"angle":25.0,"grammar":"firstCoral.lsys2"},{"name":"test2","thickness":0.05299999937415123,"length":0.8690000176429749,"nbIteration":5,"angle":25.0,"grammar":"custom.lsys"},{"name":"utfyt","thickness":0.3409999907016754,"length":0.8690000176429749,"nbIteration":4,"angle":25.0,"grammar":"custom.lsys"}]}
